--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev:client": "ts-node server/index.ts",
     "build:server": "tsc --project tsconfig.server.json",
     "build:next": "next build",
-    "build": "npm-run-all build:*",
-    "start": "NODE_ENV=production node build/index.js",
+    "build": "nodemon server/index.ts",
+    "start": "node build/index.js",
     "lint": "next lint"
   },
   "dependencies": {
