--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev:client": "ts-node server/index.ts",
     "build:server": "tsc --project tsconfig.server.json",
     "build:next": "next build",
-    "build": "nodemon server/index.ts",
+    "build": "npm-run-all build:*",
     "start": "node build/index.js",
     "lint": "next lint"
   },
